# ctf-utils

./: .gitignore  pyproject.toml
src/: blue_prince_cipher.py  blue_prince_numeric_core.py  definitions.py  q12p1.py  q12p3.py  q3.py  q5.py  q7.py  q8p2.py
src/examples/: alphabetical_combination_lock_crack.py  chess_example.py  codecs_example.py  hex_example.py  padding_oracle_crack_example.py  race_example.py  random_phrase_example.py  reprint_example.py  secure_random_example.py
src/examples/padding_oracle_crack/: aiohttp_example.py  local_example.py  requests_example.py
src/examples/sockets/: echo_client.py  echo_server.py
src/extras/asyncio_extras/: __init__.py
src/extras/binary_extras/: __init__.py  bit_set.py  bit_twiddling.py  byte_length.py  conversion.py
src/extras/codecs_extras/: __init__.py  xkcd_scream.py
src/extras/collections_extras/: __init__.py  sortable_dict.py  sortabledict.py
src/extras/enum_extras/: __init__.py
src/extras/importlib_extras/: __init__.py  import_all_names.py
src/extras/math_extras/: __init__.py  chinese_remainder_theorem.py  elliptic_curve.py  isqrt.py  mod_sqrt.py  primality.py  prime_sieve.py  related_prime.py  repeated_squaring.py
src/extras/random_extras/: __init__.py  coprime.py  prime.py  specific_length.py  sysrandom.py
src/toy_cryptography/dh/: params.py  (+2 more)
src/utils/: bit_set.py  cached_download.py  code_highlight.py  colours.py  padding_oracle_crack.py  pem.py  simple_crypto.py
tests/test_toy_cryptography/: test_des.py  test_sbox.py
tests/test_utils/: test_padding_oracle_crack.py  test_simple_crypto.py
(+114 files in other folders)
