[project]
name = "ctf-utils"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "bidict>=0.23.1",
    "bitarray>=3.4.1",
    "cryptography>=44.0.2",
    "gmpy2>=2.2.1",
    "numpy>=2.2.3",
    "pyasn1>=0.6.1",
    "pygments>=2.19.1",
    "sympy>=1.13.3",
    "ugrapheme>=0.8",
    "wcwidth>=0.2.13",
]
